lib/generated/FHIRPathParser.js
// Generated from ./grammar/FHIRPath.g4 by ANTLR 4.9.0-SNAPSHOT
var __extends = (this && this.__extends) || (function () {
    var extendStatics = function (d, b) {
        extendStatics = Object.setPrototypeOf ||
            ({ __proto__: [] } instanceof Array && function (d, b) { d.__proto__ = b; }) ||
            function (d, b) { for (var p in b) if (Object.prototype.hasOwnProperty.call(b, p)) d[p] = b[p]; };
        return extendStatics(d, b);
    };
    return function (d, b) {
        if (typeof b !== "function" && b !== null)
            throw new TypeError("Class extends value " + String(b) + " is not a constructor or null");
        extendStatics(d, b);
        function __() { this.constructor = d; }
        d.prototype = b === null ? Object.create(b) : (__.prototype = b.prototype, new __());
    };
})();
import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { Token } from "antlr4ts/Token";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";
import * as Utils from "antlr4ts/misc/Utils";
var FHIRPathParser = /** @class */ (function (_super) {
    __extends(FHIRPathParser, _super);
    function FHIRPathParser(input) {
        var _this = _super.call(this, input) || this;
        _this._interp = new ParserATNSimulator(FHIRPathParser._ATN, _this);
        return _this;
    }
    Object.defineProperty(FHIRPathParser.prototype, "vocabulary", {
        // @Override
        // @NotNull
        get: function () {
            return FHIRPathParser.VOCABULARY;
        },
        enumerable: false,
        configurable: true
    });
    Object.defineProperty(FHIRPathParser.prototype, "grammarFileName", {
        // tslint:enable:no-trailing-whitespace
        // @Override
        get: function () { return "FHIRPath.g4"; },
        enumerable: false,
        configurable: true
    });
    Object.defineProperty(FHIRPathParser.prototype, "ruleNames", {
        // @Override
        get: function () { return FHIRPathParser.ruleNames; },
        enumerable: false,
        configurable: true
    });
    Object.defineProperty(FHIRPathParser.prototype, "serializedATN", {
        // @Override
        get: function () { return FHIRPathParser._serializedATN; },
        enumerable: false,
        configurable: true
    });
    FHIRPathParser.prototype.createFailedPredicateException = function (predicate, message) {
        return new FailedPredicateException(this, predicate, message);
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.expression = function (_p) {
        if (_p === undefined) {
            _p = 0;
        }
        var _parentctx = this._ctx;
        var _parentState = this.state;
        var _localctx = new ExpressionContext(this._ctx, _parentState);
        var _prevctx = _localctx;
        var _startState = 0;
        this.enterRecursionRule(_localctx, 0, FHIRPathParser.RULE_expression, _p);
        var _la;
        try {
            var _alt = void 0;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 32;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case FHIRPathParser.T__10:
                    case FHIRPathParser.T__11:
                    case FHIRPathParser.T__21:
                    case FHIRPathParser.T__22:
                    case FHIRPathParser.T__27:
                    case FHIRPathParser.T__29:
                    case FHIRPathParser.T__31:
                    case FHIRPathParser.T__32:
                    case FHIRPathParser.T__33:
                    case FHIRPathParser.T__34:
                    case FHIRPathParser.T__35:
                    case FHIRPathParser.T__36:
                    case FHIRPathParser.DATETIME:
                    case FHIRPathParser.TIME:
                    case FHIRPathParser.IDENTIFIER:
                    case FHIRPathParser.DELIMITEDIDENTIFIER:
                    case FHIRPathParser.STRING:
                    case FHIRPathParser.NUMBER:
                        {
                            _localctx = new TermExpressionContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 29;
                            this.term();
                        }
                        break;
                    case FHIRPathParser.T__3:
                    case FHIRPathParser.T__4:
                        {
                            _localctx = new PolarityExpressionContext(_localctx);
                            this._ctx = _localctx;
                            _prevctx = _localctx;
                            this.state = 30;
                            _la = this._input.LA(1);
                            if (!(_la === FHIRPathParser.T__3 || _la === FHIRPathParser.T__4)) {
                                this._errHandler.recoverInline(this);
                            }
                            else {
                                if (this._input.LA(1) === Token.EOF) {
                                    this.matchedEOF = true;
                                }
                                this._errHandler.reportMatch(this);
                                this.consume();
                            }
                            this.state = 31;
                            this.expression(11);
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
                this._ctx._stop = this._input.tryLT(-1);
                this.state = 74;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
                while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        if (this._parseListeners != null) {
                            this.triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            this.state = 72;
                            this._errHandler.sync(this);
                            switch (this.interpreter.adaptivePredict(this._input, 1, this._ctx)) {
                                case 1:
                                    {
                                        _localctx = new MultiplicativeExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 34;
                                        if (!(this.precpred(this._ctx, 10))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
                                        }
                                        this.state = 35;
                                        _la = this._input.LA(1);
                                        if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FHIRPathParser.T__5) | (1 << FHIRPathParser.T__6) | (1 << FHIRPathParser.T__7) | (1 << FHIRPathParser.T__8))) !== 0))) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 36;
                                        this.expression(11);
                                    }
                                    break;
                                case 2:
                                    {
                                        _localctx = new AdditiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 37;
                                        if (!(this.precpred(this._ctx, 9))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
                                        }
                                        this.state = 38;
                                        _la = this._input.LA(1);
                                        if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FHIRPathParser.T__3) | (1 << FHIRPathParser.T__4) | (1 << FHIRPathParser.T__9))) !== 0))) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 39;
                                        this.expression(10);
                                    }
                                    break;
                                case 3:
                                    {
                                        _localctx = new UnionExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 40;
                                        if (!(this.precpred(this._ctx, 7))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
                                        }
                                        this.state = 41;
                                        this.match(FHIRPathParser.T__12);
                                        this.state = 42;
                                        this.expression(8);
                                    }
                                    break;
                                case 4:
                                    {
                                        _localctx = new InequalityExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 43;
                                        if (!(this.precpred(this._ctx, 6))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
                                        }
                                        this.state = 44;
                                        _la = this._input.LA(1);
                                        if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FHIRPathParser.T__13) | (1 << FHIRPathParser.T__14) | (1 << FHIRPathParser.T__15) | (1 << FHIRPathParser.T__16))) !== 0))) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 45;
                                        this.expression(7);
                                    }
                                    break;
                                case 5:
                                    {
                                        _localctx = new EqualityExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 46;
                                        if (!(this.precpred(this._ctx, 5))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
                                        }
                                        this.state = 47;
                                        _la = this._input.LA(1);
                                        if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FHIRPathParser.T__17) | (1 << FHIRPathParser.T__18) | (1 << FHIRPathParser.T__19) | (1 << FHIRPathParser.T__20))) !== 0))) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 48;
                                        this.expression(6);
                                    }
                                    break;
                                case 6:
                                    {
                                        _localctx = new MembershipExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 49;
                                        if (!(this.precpred(this._ctx, 4))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
                                        }
                                        this.state = 50;
                                        _la = this._input.LA(1);
                                        if (!(_la === FHIRPathParser.T__21 || _la === FHIRPathParser.T__22)) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 51;
                                        this.expression(5);
                                    }
                                    break;
                                case 7:
                                    {
                                        _localctx = new AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 52;
                                        if (!(this.precpred(this._ctx, 3))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
                                        }
                                        this.state = 53;
                                        this.match(FHIRPathParser.T__23);
                                        this.state = 54;
                                        this.expression(4);
                                    }
                                    break;
                                case 8:
                                    {
                                        _localctx = new OrExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 55;
                                        if (!(this.precpred(this._ctx, 2))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
                                        }
                                        this.state = 56;
                                        _la = this._input.LA(1);
                                        if (!(_la === FHIRPathParser.T__24 || _la === FHIRPathParser.T__25)) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 57;
                                        this.expression(3);
                                    }
                                    break;
                                case 9:
                                    {
                                        _localctx = new ImpliesExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 58;
                                        if (!(this.precpred(this._ctx, 1))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
                                        }
                                        this.state = 59;
                                        this.match(FHIRPathParser.T__26);
                                        this.state = 60;
                                        this.expression(2);
                                    }
                                    break;
                                case 10:
                                    {
                                        _localctx = new InvocationExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 61;
                                        if (!(this.precpred(this._ctx, 13))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
                                        }
                                        this.state = 62;
                                        this.match(FHIRPathParser.T__0);
                                        this.state = 63;
                                        this.invocation();
                                    }
                                    break;
                                case 11:
                                    {
                                        _localctx = new IndexerExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 64;
                                        if (!(this.precpred(this._ctx, 12))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
                                        }
                                        this.state = 65;
                                        this.match(FHIRPathParser.T__1);
                                        this.state = 66;
                                        this.expression(0);
                                        this.state = 67;
                                        this.match(FHIRPathParser.T__2);
                                    }
                                    break;
                                case 12:
                                    {
                                        _localctx = new TypeExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                        this.pushNewRecursionContext(_localctx, _startState, FHIRPathParser.RULE_expression);
                                        this.state = 69;
                                        if (!(this.precpred(this._ctx, 8))) {
                                            throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
                                        }
                                        this.state = 70;
                                        _la = this._input.LA(1);
                                        if (!(_la === FHIRPathParser.T__10 || _la === FHIRPathParser.T__11)) {
                                            this._errHandler.recoverInline(this);
                                        }
                                        else {
                                            if (this._input.LA(1) === Token.EOF) {
                                                this.matchedEOF = true;
                                            }
                                            this._errHandler.reportMatch(this);
                                            this.consume();
                                        }
                                        this.state = 71;
                                        this.typeSpecifier();
                                    }
                                    break;
                            }
                        }
                    }
                    this.state = 76;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.term = function () {
        var _localctx = new TermContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, FHIRPathParser.RULE_term);
        try {
            this.state = 84;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case FHIRPathParser.T__10:
                case FHIRPathParser.T__11:
                case FHIRPathParser.T__21:
                case FHIRPathParser.T__22:
                case FHIRPathParser.T__34:
                case FHIRPathParser.T__35:
                case FHIRPathParser.T__36:
                case FHIRPathParser.IDENTIFIER:
                case FHIRPathParser.DELIMITEDIDENTIFIER:
                    _localctx = new InvocationTermContext(_localctx);
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 77;
                        this.invocation();
                    }
                    break;
                case FHIRPathParser.T__29:
                case FHIRPathParser.T__31:
                case FHIRPathParser.T__32:
                case FHIRPathParser.DATETIME:
                case FHIRPathParser.TIME:
                case FHIRPathParser.STRING:
                case FHIRPathParser.NUMBER:
                    _localctx = new LiteralTermContext(_localctx);
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 78;
                        this.literal();
                    }
                    break;
                case FHIRPathParser.T__33:
                    _localctx = new ExternalConstantTermContext(_localctx);
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 79;
                        this.externalConstant();
                    }
                    break;
                case FHIRPathParser.T__27:
                    _localctx = new ParenthesizedTermContext(_localctx);
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 80;
                        this.match(FHIRPathParser.T__27);
                        this.state = 81;
                        this.expression(0);
                        this.state = 82;
                        this.match(FHIRPathParser.T__28);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.literal = function () {
        var _localctx = new LiteralContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, FHIRPathParser.RULE_literal);
        var _la;
        try {
            this.state = 94;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
                case 1:
                    _localctx = new NullLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 86;
                        this.match(FHIRPathParser.T__29);
                        this.state = 87;
                        this.match(FHIRPathParser.T__30);
                    }
                    break;
                case 2:
                    _localctx = new BooleanLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 88;
                        _la = this._input.LA(1);
                        if (!(_la === FHIRPathParser.T__31 || _la === FHIRPathParser.T__32)) {
                            this._errHandler.recoverInline(this);
                        }
                        else {
                            if (this._input.LA(1) === Token.EOF) {
                                this.matchedEOF = true;
                            }
                            this._errHandler.reportMatch(this);
                            this.consume();
                        }
                    }
                    break;
                case 3:
                    _localctx = new StringLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 89;
                        this.match(FHIRPathParser.STRING);
                    }
                    break;
                case 4:
                    _localctx = new NumberLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 90;
                        this.match(FHIRPathParser.NUMBER);
                    }
                    break;
                case 5:
                    _localctx = new DateTimeLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 91;
                        this.match(FHIRPathParser.DATETIME);
                    }
                    break;
                case 6:
                    _localctx = new TimeLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 92;
                        this.match(FHIRPathParser.TIME);
                    }
                    break;
                case 7:
                    _localctx = new QuantityLiteralContext(_localctx);
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 93;
                        this.quantity();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.externalConstant = function () {
        var _localctx = new ExternalConstantContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, FHIRPathParser.RULE_externalConstant);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 96;
                this.match(FHIRPathParser.T__33);
                this.state = 99;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case FHIRPathParser.T__10:
                    case FHIRPathParser.T__11:
                    case FHIRPathParser.T__21:
                    case FHIRPathParser.T__22:
                    case FHIRPathParser.IDENTIFIER:
                    case FHIRPathParser.DELIMITEDIDENTIFIER:
                        {
                            this.state = 97;
                            this.identifier();
                        }
                        break;
                    case FHIRPathParser.STRING:
                        {
                            this.state = 98;
                            this.match(FHIRPathParser.STRING);
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.invocation = function () {
        var _localctx = new InvocationContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, FHIRPathParser.RULE_invocation);
        try {
            this.state = 106;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                case 1:
                    _localctx = new MemberInvocationContext(_localctx);
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 101;
                        this.identifier();
                    }
                    break;
                case 2:
                    _localctx = new FunctionInvocationContext(_localctx);
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 102;
                        this.function();
                    }
                    break;
                case 3:
                    _localctx = new ThisInvocationContext(_localctx);
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 103;
                        this.match(FHIRPathParser.T__34);
                    }
                    break;
                case 4:
                    _localctx = new IndexInvocationContext(_localctx);
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 104;
                        this.match(FHIRPathParser.T__35);
                    }
                    break;
                case 5:
                    _localctx = new TotalInvocationContext(_localctx);
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 105;
                        this.match(FHIRPathParser.T__36);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.function = function () {
        var _localctx = new FunctionContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, FHIRPathParser.RULE_function);
        var _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 108;
                this.identifier();
                this.state = 109;
                this.match(FHIRPathParser.T__27);
                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FHIRPathParser.T__3) | (1 << FHIRPathParser.T__4) | (1 << FHIRPathParser.T__10) | (1 << FHIRPathParser.T__11) | (1 << FHIRPathParser.T__21) | (1 << FHIRPathParser.T__22) | (1 << FHIRPathParser.T__27) | (1 << FHIRPathParser.T__29))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (FHIRPathParser.T__31 - 32)) | (1 << (FHIRPathParser.T__32 - 32)) | (1 << (FHIRPathParser.T__33 - 32)) | (1 << (FHIRPathParser.T__34 - 32)) | (1 << (FHIRPathParser.T__35 - 32)) | (1 << (FHIRPathParser.T__36 - 32)) | (1 << (FHIRPathParser.DATETIME - 32)) | (1 << (FHIRPathParser.TIME - 32)) | (1 << (FHIRPathParser.IDENTIFIER - 32)) | (1 << (FHIRPathParser.DELIMITEDIDENTIFIER - 32)) | (1 << (FHIRPathParser.STRING - 32)) | (1 << (FHIRPathParser.NUMBER - 32)))) !== 0)) {
                    {
                        this.state = 110;
                        this.paramList();
                    }
                }
                this.state = 113;
                this.match(FHIRPathParser.T__28);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.paramList = function () {
        var _localctx = new ParamListContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, FHIRPathParser.RULE_paramList);
        var _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 115;
                this.expression(0);
                this.state = 120;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === FHIRPathParser.T__37) {
                    {
                        {
                            this.state = 116;
                            this.match(FHIRPathParser.T__37);
                            this.state = 117;
                            this.expression(0);
                        }
                    }
                    this.state = 122;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.quantity = function () {
        var _localctx = new QuantityContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, FHIRPathParser.RULE_quantity);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 123;
                this.match(FHIRPathParser.NUMBER);
                this.state = 125;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 9, this._ctx)) {
                    case 1:
                        {
                            this.state = 124;
                            this.unit();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
    FHIRPathParser.prototype.unit = function () {
        var _localctx = new UnitContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, FHIRPathParser.RULE_unit);
        try {
            this.state = 130;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case FHIRPathParser.T__38:
                case FHIRPathParser.T__39:
                case FHIRPathParser.T__40:
                case FHIRPathParser.T__41:
                case FHIRPathParser.T__42:
                case FHIRPathParser.T__43:
                case FHIRPathParser.T__44:
                case FHIRPathParser.T__45:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 127;
                        this.dateTimePrecision();
                    }
                    break;
                case FHIRPathParser.T__46:
                case FHIRPathParser.T__47:
                case FHIRPathParser.T__48:
                case FHIRPathParser.T__49:
                case FHIRPathParser.T__50:
                case FHIRPathParser.T__51:
                case FHIRPathParser.T__52:
                case FHIRPathParser.T__53:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 128;
                        this.pluralDateTimePrecision();
                    }
                    break;
                case FHIRPathParser.STRING:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 129;
                        this.match(FHIRPathParser.STRING);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    };
    // @RuleVersion(0)
